--- a/publications.html
+++ b/publications.html
@@ -456,10 +456,31 @@
 				<br>
 			</p>
 		</li>
-		
-		
-		
     </ul>
+	
+	<font size="4" color="#034f84"><b>Dissertation</b></font>
+	<br>
+	
+	<ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font style="font-weight:bold">Algorithms and Benchmarks for Robust Visual Object Tracking</font>
+				<br>
+				<font color="#000000" ><b>Heng Fan</b></font>
+				<br>
+				<font>Advisor: <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank"><font color="black">Prof. Haibin Ling</font></a></font>
+				<br>
+				<font>Committee: Professors <a href="https://www3.cs.stonybrook.edu/~gu/" target="_blank"><font color="black">Xianfeng Gu</font></a>, <a href="https://www3.cs.stonybrook.edu/~samaras/" target="_blank"><font color="black">Dimitris Samaras</font></a>, <a href="https://dentistry.temple.edu/about/faculty-staff/jie-yang-jieyang" target="_blank"><font color="black">Jie Yang</font></a></font>
+				<br>
+				<font>Department of Computer Science, State University of New York at Stony Brook, 2021.</font>
+				<br>
+				<a href="https://www.proquest.com/docview/2558097086?pq-origsite=gscholar&fromopenview=true" target="_blank"><font color="#0099ff">pdf link</font></a>
+				<br>
+			</p>
+		</li>
+	</ul>
+	
 	<HR>
 	
 	Copyright Notice: The papers presented above are to ensure timely dissemination of scholarly and technical work and only for personal or classroom use. Copyright and all rights therein are retained by authors and/or by other copyright holders.
