--- a/publications.html
+++ b/publications.html
@@ -458,7 +458,7 @@
 		</li>
     </ul>
 	
-	<font size="4" color="#034f84"><b>Dissertation</b></font>
+	<font size="4" color="#034f84"><b>PhD Dissertation</b></font>
 	<br>
 	
 	<ul style="margin-top:5px;">
