--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
 				<br>
 				<font>Pattern Recognition (<b>PR</b>), 2021, in press.</font>
 				<br>
-				<a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320321005550" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/summar6/GL-GAN" target="_blank"><font color="#0099ff">code</font></a>
+				<a href="href="publication\PR-22.pdf"" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/summar6/GL-GAN" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
