--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -297,7 +297,7 @@ div img:hover{
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/11 </font></td>
 			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Graph II [<a href="slides\3110-lecture 13-Graph II.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
-			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 4 </font></td>
 		</tr>
 		
 		<tr>
@@ -305,7 +305,7 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Graph II (cont.) [<a href="slides\3110-lecture 13-Graph II.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 4, due at 12/2/2021 </font></td>
 		</tr>
 		
 	</table>
