--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -308,6 +308,12 @@ div img:hover{
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 4, due at 12/2/2021 </font></td>
 		</tr>
 		
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 11/18 </font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Graph III </font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
 	</table>
 	</p>
 	
