--- a/teaching.html
+++ b/teaching.html
@@ -32,14 +32,14 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 5218 & 4930 (combined), Deep Learning, Spring 2022 [<a href="#" target="_blank"><font color="#0099ff">course website (coming ...)</font></a>].
+				CSCE 5218 & 4930 (combined), Deep Learning, Spring 2022 [<a href="#" target="_blank"><font color="#0099ff">course website</font></a>].
 				<br>
 			</p>
 		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 3110, Data Structures and Algorithms, Fall 2021 [<a href="https://hengfan2010.github.io/teaching/21F-3110/index.htm" target="_blank"><font color="#0099ff">course website</font></a>].
+				CSCE 3110, Data Structures and Algorithms, Fall 2021.
 				<br>
 			</p>
 		</li>
