--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 5218 & 4930 (combined), Deep Learning, Spring 2022 [<a href="#" target="_blank"><font color="#0099ff">course website</font></a>].
+				CSCE 5218 & 4930 (combined), Deep Learning, Spring 2022 [<a href="https://hengfan2010.github.io/teaching/22S-5218_4930" target="_blank"><font color="#0099ff">course website</font></a>].
 				<br>
 			</p>
 		</li>
