--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -3,7 +3,7 @@
 <!-- saved from url=(0042)https://cse.buffalo.edu/~jmeng2/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script async="" src="./page_files/analytics.js.download"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-3974203-1', 'auto'); ga('send', 'pageview');</script>
     
-    <title>Data Structures and Algorithms</title>
+    <title>Deep Learning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../../stylefiles/global.css">
     <link rel="stylesheet" type="text/css" href="../../stylefiles/navigation.css">
