--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -31,7 +31,7 @@ div img:hover{
 	
 	
 	
-    <font size="5"><center><b>CSCE 5218 & 4930 (combined) – Deep Learning</b></center></font>
+    <font size="5"><center><b>CSCE 5218 & 4930 – Deep Learning</b></center></font>
 
 	
     <p style="margin-top:5px;">
