--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -41,12 +41,159 @@ div img:hover{
 	</center>
 	</p>
 	
-	<center>
-	<font size="4"> Under construction ...</font>
-	<br>
-	</center>
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Basic information:</b></font> <br>
+	</p>
+	
+	<p style="text-align:justify">
+	<ul>
+		<li>
+			<font size="4"> Instructor: <a href="https://hengfan2010.github.io/index.html" target="_blank"><font color="#0099ff">Heng Fan</font></a> (heng.fan@unt.edu)</font>
+		</li>
+		<li>
+			<font size="4"> Office: Discovery Park F284 </font>
+		</li>
+		<li>
+			<font size="4"> Phone: 940-565-3209 </font>
+		</li>
+		<li>
+			<font size="4"> Office hours: Th 3:30 – 5:30 pm, online (preferred, zoom link on Canvas) or in
+office, or by appointment</font>
+		</li>
+		<br>
+		<li>
+			<font size="4"> Lecture time: Tu/Th 1:00 - 2:20 pm </font>
+		</li>
+		<li>
+			<font size="4"> Classroom: NTDP B142</font>
+		</li>
+		<li>
+			<font size="4"> Syllabus: <a href=".\Syllabus.pdf" target="_blank"><font color="#0099ff">PDF</font></a></font>
+		</li>
+		
+		<br>
+		<li>
+			<font size="4"> TA: Simon Tandi (E-mail: TBD; Office TBD)</font>
+		</li>
+		<li>
+			<font size="4"> Office hours: TBD</font>
+		</li>
+	
+		<br>
+		<li>
+			<font size="4"> Grader: Syed Araib Karim (E-mail: TBD; Office TBD)</font>
+		</li>
+		<li>
+			<font size="4"> Office hours: TBD</font>
+		</li>
+	</ul>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Course description</b></font>
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4">This course aims at covering the basics of modern deep neural networks. In specific, the first part will introduce the fundamental concepts in neural networks including network architecture, activation function, loss, optimization, etc. Then, the second part will describe specific types of different deep neural networks such as convolutional neural networks (CNNs), recurrent neural networks (RNNs) and attention-based Transformer, as well as their applications in computer vision and natural language processing. In the final part we will briefly discuss some recent advanced topics in deep learning including graph neural networks, unsupervised representation learning, deep reinforcement learning, generative adversarial networks (GANs), etc. In this course, the hands-on practice of implementing deep learning algorithms (in Python) will be provided via homeworks and course project.</font>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Recommended Textbooks</b></font> 
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4">We will have required readings from the following textbook:</font>
+	<ul>
+		<li>
+			<font size="4"> <i>Deep Learning</i>, by Ian Goodfellow, Yoshua Bengio, and Aaron Courville, 2016. <a href="https://www.deeplearningbook.org/" target="_blank"><font color="#0099ff">online version</font></a></font>
+		</li>
+	</ul>
+	
+	<font size="4">Besides, the following textbooks are useful as additional references:</font>
+	<ul>
+		<li>
+			<font size="4"> <i>Dive into Deep Learning</i>, by Aston Zhang, Zack C. Lipton, Mu Li, and Alex J. Smola, 2019. <a href="https://d2l.ai/index.html" target="_blank"><font color="#0099ff">online version</font></a> (A lot of examples are provided to practice deep learning.)</font>
+		</li>
+		<li>
+			<font size="4"> <i>Neural Networks and Deep Learning</i>, by Michael Nielsen, 2019. <a href="http://neuralnetworksanddeeplearning.com/" target="_blank"><font color="#0099ff">online version</font></a></font>
+		</li>
+	</ul>
+	<font size="4">In addition to the textbook, extra reading materials will be provided as we cover topics. Check out the
+course website regularly for updated reading materials.</font>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Announcements</b></font> 
+	</p>
 	
 	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Schedule and class notes (being updated)</b></font> 
+	</p>
+	
+	<p style="text-align:justify">
+	<table border = "0" cellspacing="5px">
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Date</b> </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Lecture</b> </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Reading</b> </font></td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Note</b> </font></td>
+		</tr> 
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 1/18 </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Introduction and course overview <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/20 </font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Machine learning review <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font></td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+	</table>
+	</p>
+	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Grading policy</b></font> 
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4">Grading will be based on the following components:</font>
+	<ul>
+		<li>
+			<font size="4"> Class participation and homework assignment: 25%</font>
+		</li>
+		<li>
+			<font size="4"> Paper review: 20%</font>
+		</li>
+		<li>
+			<font size="4"> Course project: 40%</font>
+		</li>
+		<li>
+			<font size="4"> Final exam: 15%</font>
+		</li>
+	</ul>
+	</p>
+	
+	<HR>
 	
 </div>
 
