--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -104,7 +104,7 @@ office, or by appointment</font>
 	<HR>
 	
 	<p style="margin-top:5px;">
-	<font size="4"> <b>Recommended Textbooks</b></font> 
+	<font size="4"> <b>Textbooks</b></font> 
 	</p>
 	
 	<p style="text-align:justify">
@@ -124,7 +124,7 @@ office, or by appointment</font>
 			<font size="4"> <i>Neural Networks and Deep Learning</i>, by Michael Nielsen, 2019. <a href="http://neuralnetworksanddeeplearning.com/" target="_blank"><font color="#0099ff">online version</font></a></font>
 		</li>
 	</ul>
-	<font size="4">In addition to the textbook, extra reading materials will be provided as we cover topics. Check out the
+	<font size="4">In addition to the textbooks, extra reading materials will be provided as we cover topics. Check out the
 course website regularly for updated reading materials.</font>
 	</p>
 	
