--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -118,10 +118,13 @@ office, or by appointment</font>
 	<font size="4">Besides, the following textbooks are useful as additional references:</font>
 	<ul>
 		<li>
-			<font size="4"> <i>Dive into Deep Learning</i>, by Aston Zhang, Zack C. Lipton, Mu Li, and Alex J. Smola, 2019. <a href="https://d2l.ai/index.html" target="_blank"><font color="#0099ff">online version</font></a> (A lot of examples are provided to practice deep learning.)</font>
+			<font size="4"> <i>Dive into Deep Learning</i>, by Aston Zhang, Zack C. Lipton, Mu Li, and Alex J. Smola, 2019. <a href="https://d2l.ai/index.html" target="_blank"><font color="#0099ff">online version</font></a> <br>(A lot of examples are provided to practice deep learning.)</font>
 		</li>
 		<li>
 			<font size="4"> <i>Neural Networks and Deep Learning</i>, by Michael Nielsen, 2019. <a href="http://neuralnetworksanddeeplearning.com/" target="_blank"><font color="#0099ff">online version</font></a></font>
+		</li>
+		<li>
+			<font size="4"> <i>Introduction to Deep Learning</i>, by Eugene Charniak, 2019. <a href="https://mitpress.mit.edu/books/introduction-deep-learning" target="_blank"><font color="#0099ff">link</font></a></font>
 		</li>
 	</ul>
 	<font size="4">In addition to the textbooks, extra reading materials will be provided as we cover topics. Check out the
