--- a/publications.html
+++ b/publications.html
@@ -37,26 +37,26 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">GL-GAN: Adaptive Global and Local Bilevel Optimization for Generative Adversarial Network</font>
+				<font style="font-weight:bold">Detection and Tracking Meet Drones Challenge</font>
 				<br>
-				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Xiaohui Yuan, and Jinhai Xiang</font>
+				<font color="#000000" >Pengfei Zhu, Longyin Wen, Dawei Du, Xiao Bian, <b>Heng Fan</b>, Qinghua Hu, and Haibin Ling</font>
 				<br>
-				<font>Pattern Recognition (<b>PR</b>), 2021, in press.</font>
+				<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), accepted, in press.</font>
 				<br>
-				<a href="publication\PR-22.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/summar6/GL-GAN" target="_blank"><font color="#0099ff">code</font></a>
+				<a href="https://arxiv.org/abs/2001.06303" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/VisDrone/VisDrone-Dataset" target="_blank"><font color="#0099ff">code and project</font></a>
 				<br>
 			</p>
 		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font style="font-weight:bold">Detection and Tracking Meet Drones Challenge</font>
+				<font style="font-weight:bold">GL-GAN: Adaptive Global and Local Bilevel Optimization for Generative Adversarial Network</font>
 				<br>
-				<font color="#000000" >Pengfei Zhu, Longyin Wen, Dawei Du, Xiao Bian, <b>Heng Fan</b>, Qinghua Hu, and Haibin Ling</font>
+				<font color="#000000" >Ying Liu, <b>Heng Fan</b>, Xiaohui Yuan, and Jinhai Xiang</font>
 				<br>
-				<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2021, in press.</font>
+				<font>Pattern Recognition (<b>PR</b>), 123: 108375, 2022.</font>
 				<br>
-				<a href="https://arxiv.org/abs/2001.06303" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/VisDrone/VisDrone-Dataset" target="_blank"><font color="#0099ff">code and project</font></a>
+				<a href="publication\PR-22.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/summar6/GL-GAN" target="_blank"><font color="#0099ff">code</font></a>
 				<br>
 			</p>
 		</li>
