--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>I am an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. I obtained my Ph.D. in the CS department at <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a>, 
-	         advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff"> SUNY Empire Innovation Professor Haibin Ling</font></font></a>. Prior to this, I was a PhD student at Temple University. I spent two and a half years as a master student (courses completed) in <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a>, where I received my B.S. degree in 2013.</font></p>
+    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. He received his B.S. from <a href="http://www.hzau.edu.cn/en/HOME.htm"><font color="#0099ff">Huazhong Agricultural University</font></a> in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Professor Haibin Ling</font></font></a>) from <a href="http://www.stonybrook.edu/"><font color="#0099ff">Stony Brook University</font></a> in 2021, respectively. His research interests include computer vision, robotics, and medical image analysis. He has served as an Area Chair for WACV 2022.
     
 	<HR>
 	
@@ -73,6 +72,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2022-01:</font> Welcome PhD student Xiaoqiong Liu to join our team.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-11:</font> We have one paper on image generation accepted to Pattern Recognition.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-10:</font> We have one paper on UAV tracking and detection accepted to PAMI.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-08:</font> TOTB has been released, go check it out <a href="https://hengfan2010.github.io/projects/TOTB/"><font><font color="#0099ff"> here</font></font></a>.</li>
