--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -75,18 +75,18 @@ office, or by appointment</font>
 		
 		<br>
 		<li>
-			<font size="4"> TA: Simon Tandi (E-mail: TBD; Office TBD)</font>
+			<font size="4"> TA: Simon Tandi (E-mail: SimonPeterTandi@my.unt.edu; Office: CSE Help Lab, F232)</font>
 		</li>
 		<li>
-			<font size="4"> Office hours: TBD</font>
+			<font size="4"> Office hours: Tuesday 3:00-5:00 pm</font>
 		</li>
 	
 		<br>
 		<li>
-			<font size="4"> Grader: Syed Araib Karim (E-mail: TBD; Office TBD)</font>
+			<font size="4"> Grader: Syed Araib Karim (E-mail: SyedAraibKarim@my.unt.edu; Office: Zoom (link on Canvas))</font>
 		</li>
 		<li>
-			<font size="4"> Office hours: TBD</font>
+			<font size="4"> Office hours: Thursday 10:30-12:30 pm</font>
 		</li>
 	</ul>
 	</p>
