--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -156,7 +156,7 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 1/18 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Introduction and course overview <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
+				Introduction <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
@@ -164,10 +164,60 @@ course website regularly for updated reading materials.</font>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/20 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Machine learning review <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Machine Learning Review <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font></td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 1/25 </font></td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Machine Learning Review (cont.) <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
+			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<!--
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/18 </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				Convolutional Neural Networks [<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]
+					<ul style="margin-top:5px;">
+					<li>
+						<font size="4"> Class participation </font>
+					</li>
+					<li>
+						<font size="4"> Class participation </font>
+					</li>
+					</ul>
+				
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 1/18 </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;">
+					<li>
+						<font size="4"> Class participation </font>
+					</li>
+					<li>
+						<font size="4"> Class participation </font>
+					</li>
+					</ul>
+				
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
+			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		-->
 		
 	</table>
 	</p>
@@ -196,6 +246,33 @@ course website regularly for updated reading materials.</font>
 	</ul>
 	</p>
 	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Acknowledgment:</b> This course is adapted from the course <i>Introduction to Deep Learning</i> by Adriana Kovashka, University of Pittsburgh, Fall 2021.</font> 
+	</p>
+	<!--
+	<p style="text-align:justify">
+	<font size="4">This course is inspired by the following courses:</font>
+	<ul>
+		<li>
+			<font size="4"> <a href="https://people.cs.pitt.edu/~kovashka/cs1678_fa21/" target="_blank"><font color="#0099ff">Introduction to Deep Learning</font></a> by Adriana Kovashka, University of Pittsburgh, Fall 2021</font>
+		</li>
+		<li>
+			<font size="4"> <a href="http://cs231n.stanford.edu/" target="_blank"><font color="#0099ff">Convolutional Neural Networks for Visual Recognition</font></a> by Fei-Fei Li, Justin Johnson, and Serena Young, some content by Andrej Karpathy, Stanford University, Spring 2021</font>
+		</li>
+		<li>
+			<font size="4"> <a href="http://web.stanford.edu/class/cs224n/" target="_blank"><font color="#0099ff">Natural Language Processing with Deep Learning</font></a> by Chris Manning, Abigail See, based on an earlier course by Richard Socher, Stanford University, Winter 2019</font>
+		</li>
+		<li>
+			<font size="4"> <a href="http://deeplearning.cs.cmu.edu/" target="_blank"><font color="#0099ff">Introduction to Deep Learning</font></a> by Bhiksha Raj, Carnegie Mellon University, Fall 2019</font>
+		</li>
+		<li>
+			<font size="4"> <a href="https://www.cs.utexas.edu/~grauman/courses/spring2011/index.html" target="_blank"><font color="#0099ff">Computer Vision</font></a> by Kristen Grauman, UT Austin, Spring 2011</font>
+		</li>
+	</ul>
+	</p>
+	-->
 	<HR>
 	
 </div>
