--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -134,7 +134,7 @@ course website regularly for updated reading materials.</font>
 	<HR>
 	
 	<p style="margin-top:5px;">
-	<font size="4"> <b>Announcements</b></font> 
+	<font size="4"> <b><font color="#FF0000">Announcements</font></b></font> 
 	</p>
 	
 	
@@ -246,9 +246,12 @@ course website regularly for updated reading materials.</font>
 	</ul>
 	</p>
 	
+	<HR>
 	
+	<p style="margin-top:5px;">
+	<font size="4"> <b>Resource</b></font> 
+	</p>
 	
-	<!--
 	<p style="text-align:justify">
 	<font size="4">This course is inspired by the following courses:</font>
 	<ul>
@@ -267,9 +270,27 @@ course website regularly for updated reading materials.</font>
 		<li>
 			<font size="4"> <a href="https://www.cs.utexas.edu/~grauman/courses/spring2011/index.html" target="_blank"><font color="#0099ff">Computer Vision</font></a> by Kristen Grauman, UT Austin, Spring 2011</font>
 		</li>
+		<li>
+			<font size="4"> Introduction to Machine Learning by Rebecca Hwa, University of Pittsburgh, Fall 2015</font>
+		</li>
+		<li>
+			<font size="4"> <a href="https://filebox.ece.vt.edu/~s15ece5984/" target="_blank"><font color="#0099ff">Introduction to Machine Learning</font></a> by Dhruv Batra, Virginia Tech, Spring 2015</font>
+		</li>
+		<li>
+			<font size="4"> <a href="http://www-edlab.cs.umass.edu/~smaji/cmpsci689/" target="_blank"><font color="#0099ff">Machine Learning</font></a> by Subhransu Maji, UMass Amhrest, Spring 2015</font>
+		</li>
+		<li>
+			<font size="4"> <a href="http://cs.brown.edu/courses/csci1420/" target="_blank"><font color="#0099ff">Machine Learning</font></a> by Erik Sudderth, Brown University, Fall 2015</font>
+		</li>
+		<li>
+			<font size="4"> <a href="https://courses.engr.illinois.edu/cs543/sp2015/" target="_blank"><font color="#0099ff">Computer Vision</font></a> by Derek Hoiem, UIUC, Spring 2015</font>
+		</li>
+		<li>
+			<font size="4"> <a href="https://www.cs.utexas.edu/~mooney/cs388/" target="_blank"><font color="#0099ff">Natural Language Processing</font></a> Ray Mooney, UT Austin, Spring 2018</font>
+		</li>
 	</ul>
 	</p>
-	-->
+	
 	<HR>
 	
 </div>
