--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -164,7 +164,7 @@ course website regularly for updated reading materials.</font>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/20 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Machine Learning Review <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Machine Learning Overview <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font></td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -172,7 +172,7 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 1/25 </font></td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Machine Learning Review (cont.) <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
+				Machine Learning Overview (cont.) <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
