--- a/group.html
+++ b/group.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-3974203-1', 'auto'); ga('send', 'pageview');</script>
     <meta charset="UTF-8">
-    <title>Heng Fan - Student Supervision</title>
+    <title>Heng Fan - Group</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./stylefiles/global.css">
     <link rel="stylesheet" type="text/css" href="./stylefiles/navigation.css">
@@ -16,32 +16,44 @@
 <div class="navi central_body">
     <a class="navi" href="./index.html">Home</a>
     <a class="navi" href="./publications.html">Selected Publications</a>
+	<a class="navi navi_active" href="./group.html">Group</a>
     <a class="navi" href="./teaching.html">Teaching</a>
     <a class="navi" href="./service.html">Professional Activities</a>
-	<a class="navi navi_active" href="./student.html">Student Supervision</a>
+	
 </div>
 
 <div class="navi_bar"></div>
 
 <div class="central_body">
-
-	<font size="4" color="#034f84"><b>Master Student, Stony Brook University</b></font>
+	
+	
+	<font size="4" color="#034f84"><b>PhD Students</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
+	
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<font size="4" style="line-height: 120%;"><b>Xiaoqiong Liu</b>, University of North Texas, 2021-present</font>
+				<br>
+				<font size="4" style="line-height: 120%;">MS, Stony Brook University; Hong Kong University of Science & Technology</font>
+				<br>
+				<font size="4" style="line-height: 120%;">BS, Shanghai JiaoTong University</font>
+			</p>
+		</li>
 		
+		
+		<!--
 		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;"><a href="https://harshit13.github.io/" target="_blank"><font color="black"><b>Harshit</b></font></a>, visual object tracking (2020-present)</p>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Co-organizer, International Workshop on Computer Vision for UAVs in (<font style="font-weight:bold">ECCV</font>), 2020
+				<br>
+			</p>
 		</li>
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;"><b>Halady Miththanthaya</b>, visual object tracking (2020-present)</p>
-		</li>
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;"><b>Siranjiv Ramana Rajan</b>, visual object tracking (2020-present)</p>
-		</li>
-	</ul>
+		-->
 		
     </ul>
+	
 
 </div>
 
