--- a/teaching.html
+++ b/teaching.html
@@ -16,6 +16,7 @@
 <div class="navi central_body">
     <a class="navi" href="./index.html">Home</a>
     <a class="navi" href="./publications.html">Selected Publications</a>
+	<a class="navi" href="./group.html">Group</a>
     <a class="navi navi_active" href="./teaching.html">Teaching</a>
     <a class="navi" href="./service.html">Professional Activities</a>
 	<!--<a class="navi" href="./student.html">Student Supervision</a>-->
