--- a/group.html
+++ b/group.html
@@ -27,30 +27,20 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>PhD Students</b></font>
+	<font size="4" color="#034f84"><b>PhD Students Supervised</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Xiaoqiong Liu</b>, University of North Texas, 2021-present</font>
+				<font size="4" style="line-height: 120%;"><b>Xiaoqiong Liu</b></font>
 				<br>
 				<font size="4" style="line-height: 120%;">MS, Stony Brook University; Hong Kong University of Science & Technology</font>
 				<br>
-				<font size="4" style="line-height: 120%;">BS, Shanghai JiaoTong University</font>
+				<font size="4" style="line-height: 120%;">BS, Shanghai Jiao Tong University</font>
 			</p>
 		</li>
-		
-		
-		<!--
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Co-organizer, International Workshop on Computer Vision for UAVs in (<font style="font-weight:bold">ECCV</font>), 2020
-				<br>
-			</p>
-		</li>
-		-->
 		
     </ul>
 	
