--- a/group.html
+++ b/group.html
@@ -34,7 +34,7 @@
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				<font size="4" style="line-height: 120%;"><b>Xiaoqiong Liu</b></font>
+				<font size="4" style="line-height: 120%;"><b>Xiaoqiong Liu</b>, 2021-present</font>
 				<br>
 				<font size="4" style="line-height: 120%;">MS, Stony Brook University; Hong Kong University of Science & Technology</font>
 				<br>
