--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -241,7 +241,7 @@ course website regularly for updated reading materials.</font>
 	<HR>
 	
 	<p style="margin-top:5px;">
-	<font size="4"> <b>Resource</b></font> 
+	<font size="4"> <b>Resource and Acknowledgment</b></font> 
 	</p>
 	
 	<p style="text-align:justify">
