--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -251,6 +251,9 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> <a href="https://people.cs.pitt.edu/~kovashka/cs1678_fa21/" target="_blank"><font color="#0099ff">Introduction to Deep Learning</font></a> by Adriana Kovashka, University of Pittsburgh, Fall 2021</font>
 		</li>
 		<li>
+			<font size="4"> <a href="https://www.cc.gatech.edu/classes/AY2022/cs7643_fall/" target="_blank"><font color="#0099ff">Deep Learning</font></a> by Dhruv Batra, Georgia Tech, Fall 2021</font>
+		</li>
+		<li>
 			<font size="4"> <a href="http://cs231n.stanford.edu/" target="_blank"><font color="#0099ff">Convolutional Neural Networks for Visual Recognition</font></a> by Fei-Fei Li, Justin Johnson, and Serena Young, some content by Andrej Karpathy, Stanford University, Spring 2021</font>
 		</li>
 		<li>
