--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2022-01:</font> Check <a href="https://arxiv.org/abs/2201.02526" target="_blank"><font><font color="#0099ff">InBN</font></font></a> on arXix, a simple, general and effective backbone for improving tracking.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2022-01:</font> Welcome PhD student Xiaoqiong Liu to join our team.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-11:</font> We have one paper on image generation accepted to Pattern Recognition.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2021-10:</font> We have one paper on UAV tracking and detection accepted to PAMI.</li>
