--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -133,7 +133,7 @@ course website regularly for updated reading materials.</font>
 	<HR>
 	
 	<p style="margin-top:5px;">
-	<font size="4"> <b>Schedule and class notes (being updated)</b></font> 
+	<font size="4"> <b>Schedule and class notes (<font color="#FF0000">being updated</font>)</b></font> 
 	</p>
 	
 	<p style="text-align:justify">
@@ -170,27 +170,24 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
-		<!--
+		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/18 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/27 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
-				Convolutional Neural Networks [<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]
-					<ul style="margin-top:5px;">
-					<li>
-						<font size="4"> Class participation </font>
-					</li>
-					<li>
-						<font size="4"> Class participation </font>
-					</li>
+				Neural Network Basics
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Network architecture </font>
+						</li>
 					</ul>
-				
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
+		<!--
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 1/18 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
