--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -172,8 +172,8 @@ course website regularly for updated reading materials.</font>
 		
 		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/27 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<td width=100  style='width:80.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/27 </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 				Neural Network Basics
 					<ul style="margin-top:5px;margin-bottom:5px;">
@@ -183,30 +183,42 @@ course website regularly for updated reading materials.</font>
 					</ul>
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
+			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
-		<!--
+		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 1/18 </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<td width=100  style='width:80.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 2/1 </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
-					<ul style="margin-top:5px;">
+					<ul style="margin-top:5px;margin-bottom:5px;">
 					<li>
-						<font size="4"> Class participation </font>
-					</li>
-					<li>
-						<font size="4"> Class participation </font>
+						<font size="4"> Loss function </font>
 					</li>
 					</ul>
 				
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
-			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
+			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
-		-->
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/3 </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> Gradient descent </font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
+			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
 		
 	</table>
 	</p>
