--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -129,6 +129,12 @@ course website regularly for updated reading materials.</font>
 	<font size="4"> <b><font color="#FF0000">Announcements</font></b></font> 
 	</p>
 	
+	<ul>
+		<li>
+			<font size="4"> <b>02/01/2022:</b> The details of the course project have been released, check it <a href="./course_project.htm" target="_blank"><font color="#0099ff">here</font></a>.</font>
+		</li>
+	</ul>
+	
 	
 	<HR>
 	
@@ -210,9 +216,25 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
-							<font size="4"> Gradient descent </font>
+							<font size="4"> Gradient descent (<font color="#FF0000">class canceled due to weather</font>) </font>
 						</li>
 					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
+			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 4</b> <br> 2/8 </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+					<li>
+						<font size="4"> Gradient descent </font>
+					</li>
+					</ul>
+				
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
