--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -135,6 +135,15 @@ course website regularly for updated reading materials.</font>
 		</li>
 	</ul>
 	
+	<p style="margin-top:5px;">
+	<font size="4"> <b><font color="#FF0000">Links</font></b></font> 
+	</p>
+	
+	<ul>
+		<li>
+			<font size="4"> <a href="./course_project.htm" target="_blank"><font color="#0099ff">Course Project</font></a></font>
+		</li>
+	</ul>
 	
 	<HR>
 	
