--- a/teaching/22S-5218_4930/course_project.htm
+++ b/teaching/22S-5218_4930/course_project.htm
@@ -187,6 +187,11 @@ div img:hover{
 	<br>
 	
 	Your proposal and final report should be structured like a research paper, consisting of Abstract, Introduction, Related Work, Methodology, Experimnets (with analysis), Conclusion and References. 
+	
+	<br>
+	<br>
+	
+	You can find many good examples for the course project report at  <a href="http://cs231n.stanford.edu/2017/reports.html" target="_blank"><font color="#0099ff">here</font></a> (remember to format it using CVPR style).
 	</font>
 	
 	<HR>
