--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -131,6 +131,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>02/15/2022:</b> The course project proposal is due to <font color="#FF0000">Feb. 28, 2022</font>.</font>
+		</li>
+		<li>
 			<font size="4"> <b>02/01/2022:</b> The details of the course project have been released, check it <a href="./course_project.htm" target="_blank"><font color="#0099ff">here</font></a>.</font>
 		</li>
 	</ul>
