--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -312,7 +312,7 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" color="#FF0000"> Project proposal due on 2/28 </font></td>
 		</tr>
 		
 		<tr>
@@ -327,7 +327,46 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
-			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
+		</tr>
+		
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 3/1 </font></td>
+			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<b>Convolutional Neural Networks (CNNs)</b>
+					<ul style="margin-top:5px;margin-bottom:5px;">
+					<li>
+						<font size="4"> Convolution  </font>
+					</li>
+					<li>
+						<font size="4"> Pooling  </font>
+					</li>
+					</ul>
+				
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
+			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/3 </font></td>
+			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
+						<li>
+							<font size="4"> CNN architectures </font>
+						</li>
+						<li>
+							<font size="4"> Applications </font>
+						</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
+			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 	</table>
