--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -131,6 +131,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>02/28/2022:</b> The paper review list 1 is out; due on <font color="#FF0000">Mar. 8, 2022</font>.</font>
+		</li>
+		<li>
 			<font size="4"> <b>02/15/2022:</b> The course project proposal is due to <font color="#FF0000">Feb. 28, 2022</font>.</font>
 		</li>
 		<li>
@@ -148,6 +151,30 @@ course website regularly for updated reading materials.</font>
 		</li>
 	</ul>
 	
+	<HR>
+	
+	<p style="margin-top:5px;">
+	<font size="4"> <b><font color="#FF0000">Paper review list</font></b></font> 
+	</p>
+	
+	
+	<font size="4"><b>Important:</b> Read the requirements (<a href="./paper_review.htm" target="_blank"><font color="#0099ff">click here</font></a>) for paper review. Here is a <a href="./FanHeng-01-Review-Henriques.pdf" target="_blank"><font color="#0099ff">review example</font></a> for your reference.</font>
+	
+	
+	<p style="text-align:justify">
+	<font size="4" ><b>Paper review list 1 for Week 7</b> (<font size="4" color="#FF0000">due on 3/8</font>):</font>
+	<ol>
+		<li>
+			<font size="4" > Y LeCun, L Bottou, Y Bengio, and P Haffner, Gradient-based learning applied to document recognition, <i>Proceedings of the IEEE</i>, 1998.</font>
+		</li>
+		<li>
+			<font size="4" > A Paszke, et al., PyTorch: An Imperative Style, High-Performance Deep Learning Library, <i>NeurIPS</i>, 2019.</font>
+		</li>
+		
+	</ol>
+	</p>
+	
+	</br>
 	<HR>
 	
 	<p style="margin-top:5px;">
@@ -305,13 +332,13 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
 					<li>
-						<font size="4"> PyTorch tutorial by Simon Tandi  </font>
+						<font size="4"> Deep neural network training - part 3  </font>
 					</li>
 					</ul>
 				
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
 			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" color="#FF0000"> Project proposal due on 2/28 </font></td>
 		</tr>
 		
@@ -321,18 +348,28 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
-							<font size="4"> Deep neural network training - part 3 </font>
+							<font size="4"> <font color="#FF0000">class canceled due to weather</font> </font>
 						</li>
 					</ul>
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
 		</tr>
 		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 3/1 </font></td>
+			<td width=500 style='width:480.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+				<b>PyTorch Tutorial</b>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 1 is out; due on 3/8</font> </font></td>
+		</tr>
 		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 3/1 </font></td>
+			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <br> 3/3 </font></td>
 			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 				<b>Convolutional Neural Networks (CNNs)</b>
@@ -352,7 +389,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/3 </font></td>
+			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 3/8 </font></td>
 			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
