--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -165,7 +165,7 @@ course website regularly for updated reading materials.</font>
 	<font size="4" ><b>Paper review list 1 for Week 7</b> (<font size="4" color="#FF0000">due on 3/8</font>):</font>
 	<ol>
 		<li>
-			<font size="4" > Y LeCun, L Bottou, Y Bengio, and P Haffner, Gradient-based learning applied to document recognition, <i>Proceedings of the IEEE</i>, 1998.</font>
+			<font size="4" > A Krizhevsky, I Sutskever, and G Hinton, ImageNet Classification with Deep Convolutional Neural Networks, <i>NeurIPS</i>, 2012.</font>
 		</li>
 		<li>
 			<font size="4" > A Paszke, et al., PyTorch: An Imperative Style, High-Performance Deep Learning Library, <i>NeurIPS</i>, 2019.</font>
