--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -131,6 +131,9 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
+			<font size="4"> <b>02/08/2022:</b> The paper review list 2 is out; due on <font color="#FF0000">Mar. 15, 2022</font>.</font>
+		</li>
+		<li>
 			<font size="4"> <b>02/28/2022:</b> The paper review list 1 is out; due on <font color="#FF0000">Mar. 8, 2022</font>.</font>
 		</li>
 		<li>
@@ -169,6 +172,20 @@ course website regularly for updated reading materials.</font>
 		</li>
 		<li>
 			<font size="4" > A Paszke, et al., PyTorch: An Imperative Style, High-Performance Deep Learning Library, <i>NeurIPS</i>, 2019.</font>
+		</li>
+		
+	</ol>
+	</p>
+	
+	<p style="text-align:justify">
+	<font size="4" ><b>Paper review list 2 for Week 8</b> (<font size="4" color="#FF0000">due on 3/15</font>):</font>
+	<ol>
+		<li>
+			<font size="4" > K Simonyan and A Zisserman, Very Deep Convolutional Networks for Large-Scale Image Recognition, <i>ICLR</i>, 2015.</font>
+		</li>
+		<li>
+			<font size="4" > K. He, X. Zhang, S. Ren, and J. Sun, Deep Residual Learning for Image Recognition
+, <i>CVPR</i>, 2016.</font>
 		</li>
 		
 	</ol>
